--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "@types/node": "^17.0.13",
     "eslint": "^8.8.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "vue": "^3.2.29",
+    "vue-demi": "^0.12.1"
   }
 }
